WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285070
AX: AXPropertyName::IsGrabbed is not updated when non-aria-grabbed drags happen
https://bugs.webkit.org/show_bug.cgi?id=285070
Summary
AX: AXPropertyName::IsGrabbed is not updated when non-aria-grabbed drags happen
Tyler Wilcock
Reported
2024-12-21 12:50:06 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-21 12:50:17 PST
<
rdar://problem/141880722
>
Tyler Wilcock
Comment 2
2024-12-21 12:55:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38316
EWS
Comment 3
2024-12-22 11:14:52 PST
Committed
288235@main
(050c5b458356): <
https://commits.webkit.org/288235@main
> Reviewed commits have been landed. Closing PR #38316 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug