Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm
@@ -984,7 +984,7 @@ JSRetainPtr<JSStringRef> AccessibilityUIElement::classList() const
     return nullptr;
 }
 
-bool AccessibilityUIElement::ariaIsGrabbed() const
+bool AccessibilityUIElement::isGrabbed() const
 {
     return boolAttributeValue(NSAccessibilityGrabbedAttribute);
 }
